projects/events-frontend/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-frontend
  namespace: events-frontend
spec:
  selector:
    app: events-frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
